# yggdrasil-proxy

./: .gitignore  Cargo.toml  README.md
src/: main.rs  repository.rs  utils.rs
src/entity/: mod.rs  prelude.rs  profiles.rs
src/model/: errors.rs  mod.rs  reply.rs  request.rs
src/proxy/: mod.rs  pre_proxy.rs  proxy.rs
src/web/: api.rs  filters.rs  handlers.rs  mod.rs
