[package]
name = "yggdrasil-proxy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
tokio = { version = "1.21.0", features = ["full"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.86"
serde_yaml = "0.9.11"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.24"
jsonwebtoken = "8.1.1"
sea-orm = { version = "0.9.2", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
once_cell = "1.14.0"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
base64 = "0.13.0"
rsa = "0.7.0"
sha1 = { version = "0.10.5", features = ["oid"] }
signature = "1.6.4"
chrono = "0.4.22"
rand = "0.8.5"

[profile.dev.package.num-bigint-dig]
opt-level = 3